added mobile menu
add a burger button, menu and some animations to it all

--- a/index.html
+++ b/index.html
@@ -12,13 +12,22 @@
     />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="index.html"> THIS INTERIOR </a>
-      </nav>
+    <nav>
+      <a href="index.html" class="logo"> THIS INTERIOR </a>
 
-      <span class="material-icons"> menu </span>
-    </header>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html">Collection</a></li>
+        <li><a href="index.html">About</a></li>
+        <li><a href="index.html">Contact</a></li>
+      </ul>
+
+      <div class="burger">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+      </div>
+    </nav>
 
     <main>
       <section>
@@ -57,5 +66,7 @@
     <footer>
       <p>Matheus Carvalho @ DevChallenges.io</p>
     </footer>
+
+    <script src="app.js"></script>
   </body>
 </html>
